--- a/.github/workflows/purge-cache.yml
+++ b/.github/workflows/purge-cache.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-    paths: ./app/**/*
+    paths:
+      - "app/**"
+      - "package.json"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
