--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: ♻️ Purge Cloudflare cache
+name: 🚀 Deploy
 
 on:
   push:
@@ -10,9 +10,31 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  deploy:
+    name: 🚀 Deploy
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v4
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: 📥 Install dependencies
+        run: npm i -g @railway/cli
+
+      - name: 🚀 Deploy
+        run: railway up
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
   purge:
     name: ♻️ Purge Cloudflare cache
     runs-on: ubuntu-latest
+    needs: deploy
 
     steps:
       - name: ⬇️ Checkout repo
