--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"dependencies": {
 		"@fastify/middie": "^8.3.0",
 		"@fastify/static": "^6.12.0",
-		"@mcansh/http-helmet": "^0.9.0",
+		"@mcansh/http-helmet": "0.0.0-experimental-ffc66da",
 		"@mcansh/remix-fastify": "3.2.1-pre.0",
 		"@remix-run/node": "0.0.0-nightly-9a845b6-20231212",
 		"@remix-run/react": "0.0.0-nightly-9a845b6-20231212",
