--- a/.github/workflows/purge-cache.yml
+++ b/.github/workflows/purge-cache.yml
@@ -45,19 +45,16 @@ jobs:
           pnpm run build
           mv ./build ./previous
 
-      - name: 📝 Generate diff
-        id: diff
+      - name: ♻️ Get URLs to Purge
+        id: urls
         run: |
-          if [ -z "$(diff -qr ./current ./previous)" ]; then
-            echo "has_diff=false" >> $GITHUB_OUTPUT
-          else
-            echo "has_diff=true" >> $GITHUB_OUTPUT
-          fi
+          URLS=$(node ./scripts/get-urls-to-purge.js)
+          echo "urls=$URLS" >> $GITHUB_ENV
 
       - name: ♻️ Purge Cloudflare cache
         uses: jakejarvis/cloudflare-purge-action@v0.3.0
-        if: steps.diff.outputs.has_diff == 'true'
+        if: steps.urls.outputs.urls != ''
         env:
           CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-          PURGE_URLS: '["https://www.mcan.sh", "https://www.mcan.sh/resume", "https://www.mcan.sh/resume.pdf"]'
+          PURGE_URLS: ${{ steps.urls.outputs.urls }}
