--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "0.0.0-experimental-ffc66da",
 		"@mcansh/remix-fastify": "3.2.1-pre.0",
-		"@remix-run/node": "0.0.0-nightly-6a1c4ff-20231219",
-		"@remix-run/react": "0.0.0-nightly-6a1c4ff-20231219",
+		"@remix-run/node": "2.4.1-pre.3",
+		"@remix-run/react": "2.4.1-pre.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
@@ -42,7 +42,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-6a1c4ff-20231219",
+		"@remix-run/dev": "2.4.1-pre.3",
 		"@types/react": "^18.2.45",
 		"@types/react-dom": "^18.2.17",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
