chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -22,37 +22,37 @@
 	"dependencies": {
 		"@fastify/middie": "^8.3.0",
 		"@fastify/static": "^6.12.0",
-		"@mcansh/http-helmet": "0.0.0-experimental-ffc66da",
-		"@mcansh/remix-fastify": "3.2.1-pre.0",
+		"@mcansh/http-helmet": "0.10.0",
+		"@mcansh/remix-fastify": "3.2.1",
 		"@remix-run/node": "2.4.1-pre.3",
 		"@remix-run/react": "2.4.1-pre.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
-		"fastify": "^4.25.0",
+		"fastify": "^4.25.1",
 		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.7.1",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"remix-utils": "7.3.0",
-		"tailwind-merge": "^2.1.0",
+		"remix-utils": "7.4.0",
+		"tailwind-merge": "^2.2.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "2.4.1-pre.3",
 		"@types/react": "^18.2.45",
-		"@types/react-dom": "^18.2.17",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "^6.14.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.127",
+		"@types/react-dom": "^18.2.18",
+		"@typescript-eslint/eslint-plugin": "^6.15.0",
+		"@typescript-eslint/parser": "^6.15.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.130",
 		"autoprefixer": "^10.4.16",
 		"del": "^7.1.0",
-		"eslint": "^8.55.0",
+		"eslint": "^8.56.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"fs-extra": "^11.2.0",
 		"gitignore-fs": "^2.2.2",
@@ -67,10 +67,10 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svgstore": "^3.0.1",
-		"tailwindcss": "^3.3.6",
+		"tailwindcss": "^3.4.0",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.3.3",
-		"vite": "^5.0.8",
+		"vite": "^5.0.10",
 		"vite-tsconfig-paths": "^4.2.2"
 	},
 	"lint-staged": {
