--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -47,6 +47,11 @@ jobs:
           # get the installed version of @remix-run/react
           PREV_VERSION=$(npm ls --depth=0 @remix-run/react --json | jq -r '.dependencies["@remix-run/react"].version')
 
+          # if prev_version is not a nightly or experimental release, we'll need to scope it to the `remix@` tag prefix
+          if [[ $PREV_VERSION != *"nightly"* && $PREV_VERSION != *"experimental"* ]]; then
+            PREV_VERSION="remix@$PREV_VERSION"
+          fi
+
           # get the latest nightly version of @remix-run/react
           VERSION=$(npm info @remix-run/react dist-tags.nightly)
 
