--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "^0.10.0",
 		"@mcansh/remix-fastify": "^3.2.1",
-		"@remix-run/node": "2.4.1-pre.3",
-		"@remix-run/react": "2.4.1-pre.3",
+		"@remix-run/node": "0.0.0-nightly-4f0a730-20240109",
+		"@remix-run/react": "0.0.0-nightly-4f0a730-20240109",
 		"@unpic/react": "^0.1.5",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
@@ -43,7 +43,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "2.4.1-pre.3",
+		"@remix-run/dev": "0.0.0-nightly-4f0a730-20240109",
 		"@types/react": "^18.2.45",
 		"@types/react-dom": "^18.2.18",
 		"@typescript-eslint/eslint-plugin": "^6.15.0",
