chore: have prettier ignore pnpm-lock.yaml
Signed-off-by: Logan McAnsh <logan@mcan.sh>
(cherry picked from commit bff7ffbd1d44810dce2c60f140b51d655b472a8a)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"clean": "./scripts/clean.js",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
-		"format": "prettier --ignore-path .gitignore --cache --cache-location .prettiercache --ignore-unknown --write .",
+		"format": "prettier --ignore-path .gitignore --ignore-path .prettierignore --cache --cache-location .prettiercache --ignore-unknown --write .",
 		"validate": "run-p lint format type-check",
 		"prepare": "node ./scripts/prepare.js",
 		"predev": "npm run build:icons",
