--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.7.1",
+		"million": "^2.6.4",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -61,6 +62,7 @@
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
 		"lint-staged": "^15.2.0",
+		"million": "^2.6.4",
 		"npm-run-all": "^4.1.5",
 		"patch-package": "^8.0.0",
 		"postcss": "^8.4.32",
