--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "^0.10.1",
 		"@mcansh/remix-fastify": "^3.2.1",
-		"@remix-run/node": "0.0.0-nightly-a1c376a-20240112",
-		"@remix-run/react": "0.0.0-nightly-a1c376a-20240112",
+		"@remix-run/node": "0.0.0-nightly-04a8f66-20240113",
+		"@remix-run/react": "0.0.0-nightly-04a8f66-20240113",
 		"@unpic/react": "^0.1.5",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.0",
@@ -44,7 +44,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-a1c376a-20240112",
+		"@remix-run/dev": "0.0.0-nightly-04a8f66-20240113",
 		"@types/react": "^18.2.47",
 		"@types/react-dom": "^18.2.18",
 		"@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -73,7 +73,7 @@
 		"tailwindcss": "^3.4.1",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.11",
+		"vite": "5.1.0-beta.0",
 		"vite-tsconfig-paths": "^4.2.3"
 	},
 	"lint-staged": {
