--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"glob": "^10.3.10",
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
+		"lightningcss": "^1.23.0",
 		"lint-staged": "^15.2.0",
 		"million": "^2.6.4",
 		"npm-run-all": "^4.1.5",
