--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "^0.10.1",
 		"@mcansh/remix-fastify": "^3.2.1",
-		"@remix-run/node": "0.0.0-nightly-04a8f66-20240113",
-		"@remix-run/react": "0.0.0-nightly-04a8f66-20240113",
+		"@remix-run/node": "0.0.0-nightly-b92a19a-20240116",
+		"@remix-run/react": "0.0.0-nightly-b92a19a-20240116",
 		"@unpic/react": "^0.1.5",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.0",
@@ -44,7 +44,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-04a8f66-20240113",
+		"@remix-run/dev": "0.0.0-nightly-b92a19a-20240116",
 		"@types/react": "^18.2.47",
 		"@types/react-dom": "^18.2.18",
 		"@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -70,6 +70,7 @@
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.2.1",
 		"prettier-plugin-tailwindcss": "^0.5.11",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.4.1",
 		"tailwindcss-padding-safe": "^1.0.6",
