--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "^0.10.1",
 		"@mcansh/remix-fastify": "^3.2.1",
-		"@remix-run/node": "0.0.0-nightly-a1c376a-20240112",
-		"@remix-run/react": "0.0.0-nightly-a1c376a-20240112",
+		"@remix-run/node": "0.0.0-nightly-b92a19a-20240116",
+		"@remix-run/react": "0.0.0-nightly-b92a19a-20240116",
 		"@unpic/react": "^0.1.5",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.0",
@@ -44,7 +44,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-a1c376a-20240112",
+		"@remix-run/dev": "0.0.0-nightly-b92a19a-20240116",
 		"@types/react": "^18.2.47",
 		"@types/react-dom": "^18.2.18",
 		"@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -61,6 +61,7 @@
 		"glob": "^10.3.10",
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
+		"lightningcss": "^1.23.0",
 		"lint-staged": "^15.2.0",
 		"million": "^2.6.4",
 		"npm-run-all": "^4.1.5",
@@ -69,11 +70,12 @@
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.2.1",
 		"prettier-plugin-tailwindcss": "^0.5.11",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.4.1",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.11",
+		"vite": "5.1.0-beta.0",
 		"vite-tsconfig-paths": "^4.2.3"
 	},
 	"lint-staged": {
