ci: rerun nightly update when package.json changes in a PR
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -4,6 +4,12 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 8 * * *"
+  pull_request:
+    types: [closed]
+    branches:
+      - main
+    paths:
+      - "package.json"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
