chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
 		"isolatedModules": true,
 
 		/* where our code runs */
-		"lib": ["DOM", "DOM.Iterable", "ES2022"],
-	},
+		"lib": ["DOM", "DOM.Iterable", "ES2022"]
+	}
 }
