--- a/package.json
+++ b/package.json
@@ -21,61 +21,61 @@
 	},
 	"dependencies": {
 		"@fastify/middie": "^8.3.0",
-		"@fastify/static": "^6.12.0",
-		"@mcansh/http-helmet": "0.0.0-experimental-854d264",
-		"@mcansh/remix-fastify": "^3.2.1",
-		"@remix-run/node": "2.6.0",
-		"@remix-run/react": "2.6.0",
-		"@unpic/react": "^0.1.5",
+		"@fastify/static": "^7.0.1",
+		"@mcansh/http-helmet": "0.10.2",
+		"@mcansh/remix-fastify": "^3.2.2",
+		"@remix-run/node": "2.7.2",
+		"@remix-run/react": "2.7.2",
+		"@unpic/react": "^0.1.11",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.0",
 		"cross-env": "^7.0.3",
-		"fastify": "^4.25.2",
+		"fastify": "^4.26.1",
 		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
-		"isbot": "^4.4.0",
-		"million": "^2.6.4",
+		"isbot": "^5.1.1",
+		"million": "^3.0.3",
 		"pretty-cache-header": "^1.0.0",
 		"react": "18.3.0-canary-5c607369c-20240116",
 		"react-dom": "18.3.0-canary-5c607369c-20240116",
 		"remix-utils": "7.5.0",
-		"tailwind-merge": "^2.2.0",
+		"tailwind-merge": "^2.2.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "2.6.0",
-		"@types/react": "^18.2.48",
-		"@types/react-dom": "^18.2.18",
-		"@typescript-eslint/eslint-plugin": "^6.19.0",
-		"@typescript-eslint/parser": "^6.19.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.135",
+		"@remix-run/dev": "2.7.2",
+		"@types/react": "^18.2.60",
+		"@types/react-dom": "^18.2.19",
+		"@typescript-eslint/eslint-plugin": "^7.1.0",
+		"@typescript-eslint/parser": "^7.1.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.140",
 		"autoprefixer": "^10.4.17",
 		"del": "^7.1.0",
-		"eslint": "^8.56.0",
+		"eslint": "^8.57.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"fs-extra": "^11.2.0",
 		"gitignore-fs": "^2.2.2",
 		"glob": "^10.3.10",
-		"husky": "^8.0.3",
+		"husky": "^9.0.11",
 		"kleur": "^4.1.5",
-		"lightningcss": "^1.23.0",
-		"lint-staged": "^15.2.0",
-		"million": "^2.6.4",
+		"lightningcss": "^1.24.0",
+		"lint-staged": "^15.2.2",
+		"million": "^3.0.3",
 		"npm-run-all": "^4.1.5",
 		"patch-package": "^8.0.0",
-		"postcss": "^8.4.33",
+		"postcss": "^8.4.35",
 		"postcss-100vh-fix": "^1.0.2",
-		"prettier": "^3.2.4",
+		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.4.1",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.3.3",
-		"vite": "5.1.0-beta.0",
+		"vite": "5.1.4",
 		"vite-tsconfig-paths": "^4.3.1"
 	},
 	"lint-staged": {
