--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
-	"exclude": ["./build", "./public/build"],
-	"include": ["remix.config.js", "env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": [
+		"**/*.ts",
+		"**/*.tsx",
+		"**/.server/**/*.ts",
+		"**/.server/**/*.tsx",
+		"**/.client/**/*.ts",
+		"**/.client/**/*.tsx"
+	],
 	"compilerOptions": {
 		/* base options */
 		"esModuleInterop": true,
@@ -16,6 +22,7 @@
 		"jsx": "react-jsx",
 		"baseUrl": ".",
 		"paths": { "~/*": ["./app/*"] },
+		"types": ["@remix-run/cloudflare", "vite/client"],
 
 		/* strictness */
 		"strict": true,
