--- a/package.json
+++ b/package.json
@@ -1,90 +1,83 @@
 {
-	"private": true,
-	"repository": "https://github.com/mcansh/mcan.sh",
-	"homepage": "https://mcan.sh",
-	"author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
-	"license": "MIT",
-	"sideEffects": false,
-	"type": "module",
-	"scripts": {
-		"build:icons": "node ./scripts/svg.js",
-		"build": "npm run build:icons && npm run type-check && remix vite:build",
-		"clean": "./scripts/clean.js",
-		"type-check": "tsc",
-		"lint": "eslint --ignore-path .gitignore --cache --fix .",
-		"format": "prettier --ignore-path .gitignore --ignore-path .prettierignore --cache --cache-location .prettiercache --ignore-unknown --write .",
-		"validate": "run-p lint format type-check",
-		"prepare": "node ./scripts/prepare.js",
-		"predev": "npm run build:icons",
-		"dev": "NODE_ENV=development node --watch-path ./server.js ./server.js",
-		"start": "NODE_ENV=production node ./server.js"
-	},
-	"dependencies": {
-		"@fastify/middie": "^8.3.0",
-		"@fastify/static": "^7.0.1",
-		"@mcansh/http-helmet": "0.10.2",
-		"@mcansh/remix-fastify": "^3.2.2",
-		"@remix-run/node": "2.7.2",
-		"@remix-run/react": "2.7.2",
-		"@unpic/react": "^0.1.11",
-		"cloudinary-build-url": "^0.2.4",
-		"clsx": "^2.1.0",
-		"cross-env": "^7.0.3",
-		"fastify": "^4.26.1",
-		"fathom-client": "^3.6.0",
-		"is-ci": "^3.0.1",
-		"isbot": "^5.1.1",
-		"pretty-cache-header": "^1.0.0",
-		"react": "18.3.0-canary-5c607369c-20240116",
-		"react-dom": "18.3.0-canary-5c607369c-20240116",
-		"remix-utils": "7.5.0",
-		"tailwind-merge": "^2.2.1",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "2.7.2",
-		"@types/react": "^18.2.60",
-		"@types/react-dom": "^18.2.19",
-		"@typescript-eslint/eslint-plugin": "^7.1.0",
-		"@typescript-eslint/parser": "^7.1.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.140",
-		"autoprefixer": "^10.4.17",
-		"del": "^7.1.0",
-		"eslint": "^8.57.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-prefer-let": "^3.0.1",
-		"fs-extra": "^11.2.0",
-		"gitignore-fs": "^2.2.2",
-		"glob": "^10.3.10",
-		"husky": "^9.0.11",
-		"kleur": "^4.1.5",
-		"lightningcss": "^1.24.0",
-		"lint-staged": "^15.2.2",
-		"npm-run-all": "^4.1.5",
-		"patch-package": "^8.0.0",
-		"postcss": "^8.4.35",
-		"postcss-100vh-fix": "^1.0.2",
-		"prettier": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.5.11",
-		"rollup-plugin-visualizer": "^5.12.0",
-		"svgstore": "^3.0.1",
-		"tailwindcss": "^3.4.1",
-		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "^5.3.3",
-		"vite": "5.1.4",
-		"vite-tsconfig-paths": "^4.3.1"
-	},
-	"lint-staged": {
-		"*.+(js|jsx|ts|tsx|cts|mts)": [
-			"eslint --cache --fix"
-		],
-		"*": [
-			"prettier --ignore-path .gitignore --cache --cache-location .prettiercache --ignore-unknown --write"
-		]
-	},
-	"engines": {
-		"node": ">=18"
-	}
+  "private": true,
+  "repository": "https://github.com/mcansh/mcan.sh",
+  "homepage": "https://mcan.sh",
+  "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
+  "license": "MIT",
+  "sideEffects": false,
+  "type": "module",
+  "scripts": {
+    "build:icons": "node ./scripts/svg.js",
+    "build": "npm run build:icons && npm run type-check && remix vite:build",
+    "clean": "./scripts/clean.js",
+    "typecheck": "tsc",
+    "lint": "biome lint ./ --apply",
+    "format": "biome format ./ --write",
+    "check": "biome check ./ --apply",
+    "validate": "run-p check typecheck",
+    "prepare": "node ./scripts/prepare.js",
+    "predev": "npm run build:icons",
+    "dev": "NODE_ENV=development node --watch-path ./server.js ./server.js",
+    "start": "NODE_ENV=production node ./server.js"
+  },
+  "dependencies": {
+    "@fastify/middie": "^8.3.0",
+    "@fastify/static": "^7.0.1",
+    "@mcansh/http-helmet": "0.10.2",
+    "@mcansh/remix-fastify": "^3.2.2",
+    "@remix-run/node": "2.7.2",
+    "@remix-run/react": "2.7.2",
+    "@unpic/react": "^0.1.11",
+    "cloudinary-build-url": "^0.2.4",
+    "clsx": "^2.1.0",
+    "cross-env": "^7.0.3",
+    "fastify": "^4.26.1",
+    "fathom-client": "^3.6.0",
+    "is-ci": "^3.0.1",
+    "isbot": "^5.1.1",
+    "pretty-cache-header": "^1.0.0",
+    "react": "18.3.0-canary-5c607369c-20240116",
+    "react-dom": "18.3.0-canary-5c607369c-20240116",
+    "remix-utils": "7.5.0",
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.5.3",
+    "@cld-apis/types": "^0.1.6",
+    "@remix-run/dev": "2.7.2",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "del": "^7.1.0",
+    "fs-extra": "^11.2.0",
+    "gitignore-fs": "^2.2.2",
+    "glob": "^10.3.10",
+    "husky": "^9.0.11",
+    "kleur": "^4.1.5",
+    "lightningcss": "^1.24.0",
+    "lint-staged": "^15.2.2",
+    "npm-run-all": "^4.1.5",
+    "patch-package": "^8.0.0",
+    "postcss": "^8.4.35",
+    "postcss-100vh-fix": "^1.0.2",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "svgstore": "^3.0.1",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-padding-safe": "^1.0.6",
+    "typescript": "^5.3.3",
+    "vite": "5.1.4",
+    "vite-tsconfig-paths": "^4.3.1"
+  },
+  "lint-staged": {
+    "*.+(js|jsx|ts|tsx|cts|mts)": [
+      "biome lint"
+    ],
+    "*": [
+      "biome format"
+    ]
+  },
+  "engines": {
+    "node": ">=18"
+  }
 }
