--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"fastify": "^4.26.2",
 		"fathom-client": "^3.6.0",
 		"isbot": "^5.1.1",
+		"playwright": "^1.42.1",
 		"pretty-cache-header": "^1.0.0",
 		"react": "18.3.0-canary-338dddc08-20240307",
 		"react-dom": "18.3.0-canary-338dddc08-20240307",
