--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "personal-website",
 	"private": true,
 	"repository": "https://github.com/mcansh/mcan.sh",
 	"homepage": "https://mcan.sh",
@@ -8,16 +9,17 @@
 	"type": "module",
 	"scripts": {
 		"build:icons": "node ./scripts/svg.js",
-		"build": "npm run build:icons && npm run type-check && remix vite:build",
+		"build": "npm run build:icons && npm run typecheck && remix vite:build",
 		"clean": "./scripts/clean.js",
-		"type-check": "tsc",
-		"lint": "eslint --ignore-path .gitignore --cache --fix .",
-		"format": "prettier --ignore-path .gitignore --ignore-path .prettierignore --cache --cache-location .prettiercache --ignore-unknown --write .",
-		"validate": "run-p lint format type-check",
+		"typecheck": "node ./scripts/cli.js typecheck",
+		"lint": "node ./scripts/cli.js lint",
+		"format": "node ./scripts/cli.js format",
+		"validate": "run-p lint format typecheck",
 		"prepare": "node ./scripts/prepare.js",
 		"predev": "npm run build:icons",
-		"dev": "NODE_ENV=development node --watch-path ./server.js ./server.js",
-		"start": "NODE_ENV=production node ./server.js"
+		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
+		"start": "cross-env NODE_ENV=production node ./server.js",
+		"knip": "knip"
 	},
 	"dependencies": {
 		"@fastify/middie": "^8.3.0",
@@ -32,7 +34,6 @@
 		"cross-env": "^7.0.3",
 		"fastify": "^4.26.2",
 		"fathom-client": "^3.6.0",
-		"is-ci": "^3.0.1",
 		"isbot": "^5.1.1",
 		"pretty-cache-header": "^1.0.0",
 		"react": "18.3.0-canary-5c607369c-20240116",
@@ -60,8 +61,10 @@
 		"glob": "^10.3.10",
 		"husky": "^9.0.11",
 		"kleur": "^4.1.5",
+		"knip": "^5.0.3",
 		"lightningcss": "^1.24.0",
 		"lint-staged": "^15.2.2",
+		"micromatch": "^4.0.5",
 		"npm-run-all": "^4.1.5",
 		"patch-package": "^8.0.0",
 		"postcss": "^8.4.35",
@@ -75,14 +78,6 @@
 		"typescript": "^5.3.3",
 		"vite": "5.1.4",
 		"vite-tsconfig-paths": "^4.3.1"
-	},
-	"lint-staged": {
-		"*.+(js|jsx|ts|tsx|cts|mts)": [
-			"eslint --cache --fix"
-		],
-		"*": [
-			"prettier --ignore-path .gitignore --cache --cache-location .prettiercache --ignore-unknown --write"
-		]
 	},
 	"engines": {
 		"node": ">=18"
