--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@cld-apis/types": "^0.1.6",
 		"@mcansh/vite-svg-sprite-plugin": "0.4.2",
 		"@remix-run/dev": "2.11.2",
+		"@tailwindcss/vite": "4.0.0-alpha.6",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-alpha.3",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
@@ -80,8 +81,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"simple-git": "^3.25.0",
-		"tailwindcss": "^3.4.10",
-		"tailwindcss-padding-safe": "^1.0.6",
+		"tailwindcss": "4.0.0-alpha.6",
 		"typescript": "^5.5.4",
 		"vite": "5.4.6",
 		"vite-tsconfig-paths": "^5.0.1"
