--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.0",
 		"cross-env": "^7.0.3",
+		"etag": "^1.8.1",
 		"fastify": "^4.26.2",
 		"fathom-client": "^3.6.0",
 		"isbot": "^5.1.1",
@@ -46,6 +47,7 @@
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "2.8.1",
+		"@types/etag": "^1.8.3",
 		"@types/react": "^18.2.64",
 		"@types/react-dom": "^18.2.21",
 		"@typescript-eslint/eslint-plugin": "^7.1.1",
