--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"gitignore-fs": "^2.2.2",
 		"glob": "^11.0.0",
 		"husky": "^9.1.5",
+		"kleur": "^4.1.5",
 		"knip": "^5.27.3",
 		"lightningcss": "^1.26.0",
 		"lint-staged": "^15.2.9",
