feat: use @mcansh/vite-svg-sprite-plugin to create sprite
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
 		"skipLibCheck": true,
 		"target": "ES2022",
 		"verbatimModuleSyntax": true,
-		"allowJs": false,
-		"checkJs": false,
+		"allowJs": true,
+		"checkJs": true,
 		"resolveJsonModule": true,
 		"moduleDetection": "force",
 		"jsx": "react-jsx",
