--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"build:icons": "node ./scripts/svg.js",
-		"build": "npm run build:icons && npm run typecheck && remix vite:build",
+		"build": "npm run typecheck && remix vite:build",
 		"clean": "./scripts/clean.js",
 		"typecheck": "node ./scripts/cli.js typecheck",
 		"lint": "node ./scripts/cli.js lint",
 		"format": "node ./scripts/cli.js format",
 		"validate": "run-p lint format typecheck",
 		"prepare": "node ./scripts/prepare.js",
-		"predev": "npm run build:icons",
 		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
 		"start": "cross-env NODE_ENV=production node ./server.js",
 		"knip": "knip"
@@ -46,6 +44,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
+		"@mcansh/vite-svg-sprite-plugin": "^0.1.3",
 		"@remix-run/dev": "2.8.1",
 		"@types/etag": "^1.8.3",
 		"@types/react": "^18.2.64",
@@ -59,7 +58,6 @@
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prefer-let": "^3.0.1",
-		"fs-extra": "^11.2.0",
 		"gitignore-fs": "^2.2.2",
 		"glob": "^10.3.10",
 		"husky": "^9.0.11",
@@ -75,7 +73,6 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.12",
 		"rollup-plugin-visualizer": "^5.12.0",
-		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.4.1",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.4.2",
@@ -85,5 +82,5 @@
 	"engines": {
 		"node": ">=18"
 	},
-	"packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2"
+	"packageManager": "pnpm@8.15.5+sha256.4b4efa12490e5055d59b9b9fc9438b7d581a6b7af3b5675eb5c5f447cee1a589"
 }
