--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	},
 	"dependencies": {
 		"@fastify/middie": "^8.3.0",
-		"@fastify/static": "^7.0.2",
+		"@fastify/static": "^7.0.3",
 		"@mcansh/http-helmet": "0.10.3",
 		"@mcansh/remix-fastify": "^3.2.2",
 		"@remix-run/node": "2.8.1",
@@ -44,11 +44,11 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@mcansh/vite-svg-sprite-plugin": "^0.1.6",
+		"@mcansh/vite-svg-sprite-plugin": "0.2.0",
 		"@remix-run/dev": "2.8.1",
 		"@types/etag": "^1.8.3",
 		"@types/react": "^18.2.74",
-		"@types/react-dom": "^18.2.23",
+		"@types/react-dom": "^18.2.24",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
 		"@typescript-eslint/parser": "^7.5.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.142",
@@ -62,7 +62,7 @@
 		"glob": "^10.3.12",
 		"husky": "^9.0.11",
 		"kleur": "^4.1.5",
-		"knip": "^5.7.0",
+		"knip": "^5.7.2",
 		"lightningcss": "^1.24.1",
 		"lint-staged": "^15.2.2",
 		"micromatch": "^4.0.5",
@@ -76,7 +76,7 @@
 		"tailwindcss": "^3.4.3",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.4.3",
-		"vite": "5.2.7",
+		"vite": "5.2.8",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"engines": {
