--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@mcansh/vite-svg-sprite-plugin": "0.2.0",
+		"@mcansh/vite-svg-sprite-plugin": "0.0.0-experimental-b22cc75",
 		"@remix-run/dev": "2.8.1",
 		"@types/etag": "^1.8.3",
 		"@types/react": "^18.2.74",
@@ -73,6 +73,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.13",
 		"rollup-plugin-visualizer": "^5.12.0",
+		"svgo": "^3.2.0",
 		"tailwindcss": "^3.4.3",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.4.3",
