chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"fastify": "^4.26.2",
 		"fathom-client": "^3.6.0",
 		"isbot": "^5.1.4",
-		"playwright": "^1.42.1",
+		"playwright": "^1.43.0",
 		"pretty-cache-header": "^1.0.0",
 		"react": "18.3.0-canary-a870b2d54-20240314",
 		"react-dom": "18.3.0-canary-a870b2d54-20240314",
@@ -44,7 +44,7 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@mcansh/vite-svg-sprite-plugin": "0.0.0-experimental-b22cc75",
+		"@mcansh/vite-svg-sprite-plugin": "0.3.0",
 		"@remix-run/dev": "2.8.1",
 		"@types/etag": "^1.8.3",
 		"@types/react": "^18.2.74",
@@ -62,7 +62,7 @@
 		"glob": "^10.3.12",
 		"husky": "^9.0.11",
 		"kleur": "^4.1.5",
-		"knip": "^5.7.2",
+		"knip": "^5.7.3",
 		"lightningcss": "^1.24.1",
 		"lint-staged": "^15.2.2",
 		"micromatch": "^4.0.5",
@@ -76,7 +76,7 @@
 		"svgo": "^3.2.0",
 		"tailwindcss": "^3.4.3",
 		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "^5.4.3",
+		"typescript": "^5.4.4",
 		"vite": "5.2.8",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
