--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
 		"patch-package": "^8.0.0",
 		"postcss": "^8.4.38",
 		"postcss-100vh-fix": "^1.0.2",
+		"precinct": "^11.0.5",
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.13",
 		"rollup-plugin-visualizer": "^5.12.0",
+		"simple-git": "^3.24.0",
 		"tailwindcss": "^3.4.3",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.4.5",
