--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"prepare": "node ./scripts/prepare.js",
 		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
 		"start": "cross-env NODE_ENV=production node ./server.js",
-		"knip": "knip"
+		"knip": "knip-bun"
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "0.10.3",
