--- a/package.json
+++ b/package.json
@@ -22,42 +22,44 @@
 	"dependencies": {
 		"@mcansh/http-helmet": "0.10.3",
 		"@mcansh/remix-fastify": "^3.3.1",
-		"@remix-run/node": "0.0.0-nightly-6eb6acf3f-20240511",
-		"@remix-run/react": "0.0.0-nightly-6eb6acf3f-20240511",
-		"@remix-run/server-runtime": "0.0.0-nightly-6eb6acf3f-20240511",
+		"@remix-run/node": "0.0.0-nightly-7a5339b1f-20240614",
+		"@remix-run/react": "0.0.0-nightly-7a5339b1f-20240614",
+		"@remix-run/server-runtime": "0.0.0-nightly-7a5339b1f-20240614",
 		"@unpic/react": "^0.1.14",
 		"address": "^2.0.2",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^4.27.0",
-		"fathom-client": "^3.6.0",
-		"isbot": "^5.1.6",
-		"playwright": "^1.44.0",
+		"fastify": "^4.28.0",
+		"fathom-client": "^3.7.0",
+		"isbot": "^5.1.9",
+		"playwright": "^1.44.1",
 		"pretty-cache-header": "^1.0.0",
-		"react": "19.0.0-beta-26f2496093-20240514",
-		"react-dom": "19.0.0-beta-26f2496093-20240514",
+		"react": "19.0.0-rc-dfd30974ab-20240613",
+		"react-dom": "19.0.0-rc-dfd30974ab-20240613",
 		"remix-utils": "7.6.0",
 		"tailwind-merge": "^2.3.0",
 		"zod": "^3.23.8"
 	},
 	"pnpm": {
 		"overrides": {
-			"react": "19.0.0-beta-26f2496093-20240514",
-			"react-dom": "19.0.0-beta-26f2496093-20240514"
+			"@types/react": "$@types/react",
+			"@types/react-dom": "$@types/react-dom",
+			"react": "$react",
+			"react-dom": "$react-dom"
 		}
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@mcansh/vite-svg-sprite-plugin": "0.4.2",
-		"@remix-run/dev": "0.0.0-nightly-6eb6acf3f-20240511",
+		"@remix-run/dev": "0.0.0-nightly-7a5339b1f-20240614",
 		"@types/etag": "^1.8.3",
-		"@types/react": "npm:types-react@19.0.0-beta.1",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-beta.1",
-		"@typescript-eslint/eslint-plugin": "^7.9.0",
-		"@typescript-eslint/parser": "^7.9.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.145",
+		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"@typescript-eslint/eslint-plugin": "^7.13.0",
+		"@typescript-eslint/parser": "^7.13.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.148",
 		"autoprefixer": "^10.4.19",
 		"del": "^7.1.0",
 		"eslint": "^8.57.0",
@@ -65,24 +67,24 @@
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"gitignore-fs": "^2.2.2",
-		"glob": "^10.3.15",
+		"glob": "^10.4.1",
 		"husky": "^9.0.11",
-		"knip": "^5.16.0",
-		"lightningcss": "^1.24.1",
-		"lint-staged": "^15.2.2",
-		"micromatch": "^4.0.5",
+		"knip": "^5.19.0",
+		"lightningcss": "^1.25.1",
+		"lint-staged": "^15.2.7",
+		"micromatch": "^4.0.7",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.38",
 		"postcss-100vh-fix": "^1.0.2",
 		"precinct": "^12.1.1",
-		"prettier": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.5.14",
+		"prettier": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.4",
 		"rollup-plugin-visualizer": "^5.12.0",
-		"simple-git": "^3.24.0",
-		"tailwindcss": "^3.4.3",
+		"simple-git": "^3.25.0",
+		"tailwindcss": "^3.4.4",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.4.5",
-		"vite": "5.2.11",
+		"vite": "5.3.1",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"engines": {
