chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "0.10.3",
-		"@mcansh/remix-fastify": "3.3.2-pre.0",
-		"@remix-run/node": "0.0.0-nightly-7a5339b1f-20240614",
-		"@remix-run/react": "0.0.0-nightly-7a5339b1f-20240614",
-		"@remix-run/server-runtime": "0.0.0-nightly-7a5339b1f-20240614",
+		"@mcansh/remix-fastify": "3.4.0",
+		"@remix-run/node": "2.11.1",
+		"@remix-run/react": "2.11.1",
+		"@remix-run/server-runtime": "2.11.1",
 		"@unpic/react": "^0.1.14",
-		"address": "^2.0.2",
+		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^4.28.0",
-		"fathom-client": "^3.7.0",
-		"isbot": "^5.1.9",
-		"playwright": "^1.44.1",
+		"fastify": "^4.28.1",
+		"fathom-client": "^3.7.2",
+		"isbot": "^5.1.14",
+		"playwright": "^1.46.0",
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc-dfd30974ab-20240613",
 		"react-dom": "19.0.0-rc-dfd30974ab-20240613",
 		"remix-utils": "7.6.0",
-		"tailwind-merge": "^2.3.0",
+		"tailwind-merge": "^2.5.2",
 		"zod": "^3.23.8"
 	},
 	"pnpm": {
@@ -53,39 +53,39 @@
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@mcansh/vite-svg-sprite-plugin": "0.4.2",
-		"@remix-run/dev": "0.0.0-nightly-7a5339b1f-20240614",
+		"@remix-run/dev": "2.11.1",
 		"@types/etag": "^1.8.3",
-		"@types/react": "npm:types-react@19.0.0-rc.1",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-		"@typescript-eslint/eslint-plugin": "^7.13.0",
-		"@typescript-eslint/parser": "^7.13.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.148",
-		"autoprefixer": "^10.4.19",
+		"@types/react": "npm:types-react@19.0.0-alpha.3",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
+		"@typescript-eslint/eslint-plugin": "^8.1.0",
+		"@typescript-eslint/parser": "^8.1.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.154",
+		"autoprefixer": "^10.4.20",
 		"del": "^7.1.0",
 		"eslint": "^8.57.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-prefer-let": "^3.0.1",
+		"eslint-plugin-prefer-let": "^4.0.0",
 		"gitignore-fs": "^2.2.2",
-		"glob": "^10.4.1",
-		"husky": "^9.0.11",
-		"knip": "^5.19.0",
-		"lightningcss": "^1.25.1",
-		"lint-staged": "^15.2.7",
+		"glob": "^11.0.0",
+		"husky": "^9.1.4",
+		"knip": "^5.27.2",
+		"lightningcss": "^1.26.0",
+		"lint-staged": "^15.2.9",
 		"micromatch": "^4.0.7",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.38",
+		"postcss": "^8.4.41",
 		"postcss-100vh-fix": "^1.0.2",
-		"precinct": "^12.1.1",
-		"prettier": "^3.3.2",
-		"prettier-plugin-tailwindcss": "^0.6.4",
+		"precinct": "^12.1.2",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.6",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"simple-git": "^3.25.0",
-		"tailwindcss": "^3.4.4",
+		"tailwindcss": "^3.4.10",
 		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "^5.4.5",
-		"vite": "5.3.1",
-		"vite-tsconfig-paths": "^4.3.2"
+		"typescript": "^5.5.4",
+		"vite": "5.4.0",
+		"vite-tsconfig-paths": "^5.0.1"
 	},
 	"engines": {
 		"node": ">=18"
