--- a/package.json
+++ b/package.json
@@ -20,24 +20,23 @@
 		"knip": "knip-bun"
 	},
 	"dependencies": {
-		"@mcansh/http-helmet": "0.10.3",
+		"@mcansh/http-helmet": "0.11.1",
 		"@mcansh/remix-fastify": "3.4.0",
-		"@remix-run/node": "2.11.2",
-		"@remix-run/react": "2.11.2",
-		"@remix-run/server-runtime": "2.11.2",
+		"@react-router/node": "0.0.0-nightly-d1bb8941a-20240920",
+		"react-router": "0.0.0-nightly-d1bb8941a-20240920",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^4.28.1",
+		"fastify": "^5.0.0",
 		"fathom-client": "^3.7.2",
 		"isbot": "^5.1.17",
-		"playwright": "^1.46.1",
+		"playwright": "^1.47.1",
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc-dfd30974ab-20240613",
 		"react-dom": "19.0.0-rc-dfd30974ab-20240613",
-		"remix-utils": "7.6.0",
+		"remix-utils": "7.7.0",
 		"tailwind-merge": "^2.5.2",
 		"zod": "^3.23.8"
 	},
@@ -52,42 +51,42 @@
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@mcansh/vite-svg-sprite-plugin": "0.4.2",
-		"@remix-run/dev": "2.11.2",
+		"@react-router/dev": "0.0.0-nightly-d1bb8941a-20240920",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-alpha.3",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
-		"@typescript-eslint/eslint-plugin": "^8.2.0",
-		"@typescript-eslint/parser": "^8.2.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.155",
+		"@typescript-eslint/eslint-plugin": "^8.6.0",
+		"@typescript-eslint/parser": "^8.6.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.163",
 		"autoprefixer": "^10.4.20",
 		"del": "^7.1.0",
 		"eslint": "^8.57.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.29.1",
+		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-plugin-import": "^2.30.0",
 		"eslint-plugin-prefer-let": "^4.0.0",
 		"gitignore-fs": "^2.2.2",
 		"glob": "^11.0.0",
-		"husky": "^9.1.5",
-		"knip": "^5.27.3",
-		"lightningcss": "^1.26.0",
-		"lint-staged": "^15.2.9",
-		"micromatch": "^4.0.7",
+		"husky": "^9.1.6",
+		"knip": "^5.30.2",
+		"lightningcss": "^1.27.0",
+		"lint-staged": "^15.2.10",
+		"micromatch": "^4.0.8",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.41",
+		"postcss": "^8.4.47",
 		"postcss-100vh-fix": "^1.0.2",
 		"precinct": "^12.1.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"rollup-plugin-visualizer": "^5.12.0",
-		"simple-git": "^3.25.0",
-		"tailwindcss": "^3.4.10",
+		"simple-git": "^3.27.0",
+		"tailwindcss": "^3.4.12",
 		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "^5.5.4",
-		"vite": "5.4.2",
+		"typescript": "^5.6.2",
+		"vite": "5.4.6",
 		"vite-tsconfig-paths": "^5.0.1"
 	},
 	"engines": {
 		"node": ">=18"
 	},
-	"packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276"
+	"packageManager": "pnpm@9.11.0"
 }
