--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -21,6 +21,7 @@ permissions:
 
 env:
   CI: true
+  BRANCH_NAME: 'actions/remix-nightly'
 
 jobs:
   bump:
@@ -76,17 +77,29 @@ jobs:
           fi
 
       - name: 📤 Push changes
-        uses: gr2m/create-or-update-pull-request-action@v1
         if: steps.bump.outputs.version != '' && steps.bump.outputs.prev_version != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          title: "chore(deps): bump `@remix-run/*` to ${{ steps.bump.outputs.version }}"
-          commit-message: "chore(deps): bump `@remix-run/*` to ${{ steps.bump.outputs.version }}"
-          update-pull-request-title-and-body: true
-          branch: actions/remix-nightly
-          author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
-          body: |
-            This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes][changes].
+        run: |
+          PR_URL="$(gh pr list --head "${env.BRANCH_NAME}" --state open --json url --jq .[].url)"
+          # if we already have a PR, we'll drop the last commit and force push the new one
+          if [[ -n "${PR_URL}" ]]; then
+              echo "PR already exists -> ${PR_URL}"
+              git config user.email "github-actions[bot]@users.noreply.github.com"
+              git config user.name "github-actions[bot]"
 
-            [changes]: https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }}
+              git add .
+              git commit --amend --no-edit
+              git push origin HEAD:${env.BRANCH_NAME} --force-with-lease
+              gh pr edit ${PR_URL} --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }}).
+          else
+              echo "PR doesn't exist, creating a new one"
+              git config user.email "github-actions[bot]@users.noreply.github.com"
+              git config user.name "github-actions[bot]"
+
+              git add .
+              git commit -m "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}"
+              git push origin HEAD:${env.BRANCH_NAME}
+
+              gh pr create --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }}).
+          fi
