ci: fix env substitution

--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -81,7 +81,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          PR_URL="$(gh pr list --head "${BRANCH_NAME}" --state open --json url --jq .[].url)"
+          PR_URL="$(gh pr list --head "$BRANCH_NAME" --state open --json url --jq .[].url)"
           # if we already have a PR, we'll drop the last commit and force push the new one
           if [[ -n "${PR_URL}" ]]; then
               echo "PR already exists -> ${PR_URL}"
@@ -90,7 +90,7 @@ jobs:
 
               git add .
               git commit --amend --no-edit
-              git push origin HEAD:${BRANCH_NAME} --force-with-lease
+              git push origin HEAD:$BRANCH_NAME --force-with-lease
               gh pr edit ${PR_URL} --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }}).
           else
               echo "PR doesn't exist, creating a new one"
@@ -99,7 +99,7 @@ jobs:
 
               git add .
               git commit -m "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}"
-              git push origin HEAD:${BRANCH_NAME}
+              git push origin HEAD:$BRANCH_NAME
 
               gh pr create --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }}).
           fi
