ci: fix formatting

--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -84,22 +84,22 @@ jobs:
           PR_URL="$(gh pr list --head "$BRANCH_NAME" --state open --json url --jq .[].url)"
           # if we already have a PR, we'll drop the last commit and force push the new one
           if [[ -n "${PR_URL}" ]]; then
-              echo "PR already exists -> ${PR_URL}"
-              git config user.email "github-actions[bot]@users.noreply.github.com"
-              git config user.name "github-actions[bot]"
-
-              git add .
-              git commit --amend --no-edit
-              git push origin HEAD:$BRANCH_NAME --force-with-lease
-              gh pr edit ${PR_URL} --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }}).
+            echo "PR already exists -> ${PR_URL}"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git config user.name "github-actions[bot]"
+            
+            git add .
+            git commit --amend --no-edit
+            git push origin HEAD:$BRANCH_NAME --force-with-lease
+            gh pr edit ${PR_URL} --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }})."
           else
-              echo "PR doesn't exist, creating a new one"
-              git config user.email "github-actions[bot]@users.noreply.github.com"
-              git config user.name "github-actions[bot]"
-
-              git add .
-              git commit -m "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}"
-              git push origin HEAD:$BRANCH_NAME
-
-              gh pr create --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }}).
+            echo "PR doesn't exist, creating a new one"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git config user.name "github-actions[bot]"
+            
+            git add .
+            git commit -m "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}"
+            git push origin HEAD:$BRANCH_NAME
+            
+            gh pr create --title "chore(deps): bump \`@remix-run/*\` to ${{ steps.bump.outputs.version }}" --body "This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes](https://github.com/remix-run/remix/compare/${{ steps.bump.outputs.prev_version }}...${{ steps.bump.outputs.version }})."
           fi
