--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -22,6 +22,7 @@ permissions:
 env:
   CI: true
   BRANCH_NAME: 'actions/remix-nightly'
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   bump:
@@ -31,6 +32,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: ⎔ Enable corepack
         run: corepack enable
@@ -78,8 +81,6 @@ jobs:
 
       - name: 📤 Push changes
         if: steps.bump.outputs.version != '' && steps.bump.outputs.prev_version != ''
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_URL="$(gh pr list --head "$BRANCH_NAME" --state open --json url --jq .[].url)"
           # if we already have a PR, we'll drop the last commit and force push the new one
