chore: add padding
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -21,7 +21,7 @@ permissions:
 
 env:
   CI: true
-  BRANCH_NAME: 'actions/remix-nightly'
+  BRANCH_NAME: "actions/remix-nightly"
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
