chore(deps): react router v7 pre
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"dependencies": {
 		"@mcansh/http-helmet": "0.11.1",
 		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@7356798",
-		"@react-router/node": "0.0.0-nightly-242035412-20240921",
+		"@react-router/node": "7.0.0-pre.0",
 		"address": "^2.0.3",
 		"change-case": "^5.4.4",
 		"cloudinary-build-url": "^0.2.4",
@@ -36,15 +36,16 @@
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc-0751fac7-20241002",
 		"react-dom": "19.0.0-rc-0751fac7-20241002",
-		"react-router": "0.0.0-nightly-8fc8239ff-20241003",
-		"react-router-dom": "0.0.0-nightly-8fc8239ff-20241003",
+		"react-router": "7.0.0-pre.0",
+		"react-router-dom": "7.0.0-pre.0",
+		"remix-utils": "^7.7.0",
 		"tailwind-merge": "^2.5.2",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@mcansh/vite-svg-sprite-plugin": "0.4.2",
-		"@react-router/dev": "0.0.0-nightly-242035412-20240921",
+		"@react-router/dev": "7.0.0-pre.0",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-rc.1",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
@@ -67,11 +68,9 @@
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.47",
 		"postcss-100vh-fix": "^1.0.2",
-		"precinct": "^12.1.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"rollup-plugin-visualizer": "^5.12.0",
-		"simple-git": "^3.27.0",
 		"tailwindcss": "^3.4.13",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.6.2",
