--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"license": "MIT",
 	"sideEffects": false,
 	"type": "module",
+	"imports": {
+		"#*": "./*"
+	},
 	"scripts": {
 		"build": "npm run typecheck && remix vite:build",
 		"clean": "./scripts/clean.js",
@@ -83,11 +86,10 @@
 		"tailwindcss": "^3.4.10",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.5.4",
-		"vite": "5.4.6",
-		"vite-tsconfig-paths": "^5.0.1"
+		"vite": "5.4.6"
 	},
 	"engines": {
 		"node": ">=18"
 	},
-	"packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276"
+	"packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
